[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Flame/Flame.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 7 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="VariableJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="RightWallRayCast" type="RayCast2D" parent="."]
position = Vector2( 3, -7 )
enabled = true
cast_to = Vector2( 3, 0 )

[node name="LeftWallRayCast" type="RayCast2D" parent="."]
position = Vector2( -3, -7 )
enabled = true
cast_to = Vector2( -3, 0 )

[node name="Flame" parent="." instance=ExtResource( 3 )]
